ChangeLog for Pylint
====================

--
    * Added a new warning invalid-encoded-data (W0512) for files that
      contain data that cannot be decoded with the specified or
      default encoding.
    * New warning bad-open-mode (W1501) for calls to open (or file) that
      specify invalid open modes (Original implementation by Sasha Issayev).
    * New warning old-style-class (C1001) for classes that do not have any
      base class.
    * Add new name type 'class_attribute' for attributes defined
      in class scope. By default, allow both const and variable names.
    * New warning trailing-whitespace (C0303) that warns about
      trailing whitespace.
    * Trailing whitespace does not count towards the line length
      limit anymore, since there is a dedicated warning for it.
    * Added a new warning unpacking-in-except (W0712) about unpacking
      exceptions in handlers, which is unsupported in Python 3.
    * Add a configuration option for missing-docstring to
      optionally exempt short functions/methods/classes from
      the check.
    * Add the type of the offending node to missing-docstring
      and empty-docstring.
    * New utility classes for per-checker unittests in testutils.py
    * Do not warn about redefinitions of variables that match the
      dummy regex.
    * Do not treat all variables starting with _ as dummy variables,
      only _ itself.
    * Make the line-too-long warning configurable by
      adding a regex for lines for with the length limit should
      not be enforced
    * Do not warn about a long line if a pylint disable
      option brings it above the length limit
    * Do not flag names in nested with statements as undefined.
    * Added a new warning 'old-raise-syntax' for the deprecated syntax
      raise Exception, args
    * astng has been renamed astroid
    * bitbucket #6: put back documentation in source distribution
    * fix spelling of max-branchs option, now max-branches
