@@ -1,7 +1,9 @@
 # pylint: disable=R0903,R0201
-"""test Invalid name"""
+"""Test for the invalid-name (C0103) warning."""
 
 __revision__ = 1
+
+import collections
 
 def Run():
     """method without any good name"""
@@ -60,3 +62,20 @@ class Correct(object):
         self._Ca_va_Pas = None
 
 V = [WHAT_Ever_inListComp for WHAT_Ever_inListComp in GOOD_CONST_NAME]
+
+def class_builder():
+    """Function returning a class object."""
+
+    class EmbeddedClass(object):
+        """Useless class."""
+
+    return EmbeddedClass
+
+BAD_NAME_FOR_CLASS = collections.namedtuple('Named', ['tuple'])
+NEXT_BAD_NAME_FOR_CLASS = class_builder()
+
+GoodName = collections.namedtuple('Named', ['tuple'])
+ToplevelClass = class_builder()
+
+AlsoCorrect = Correct
+NOT_CORRECT = Correct
